<resources>
    <string name="app_name">ControldeFlotas</string>
    <string name="google_api_key">AIzaSyC0xfrl2TKnA33pGZNhE1Njn2a2r1EiPmU</string>

    <!--Pantalla de Main-->
    <string name="codigoEmpresa">Introduzca el código de su empresa, por favor</string>
    <string name="entrada">Entrar a la aplicación</string>

    <!--Pantalla de Login-->
    <string name="controlFlotas">ARCOMOV</string>
    <string name="usuario">Usuario: </string>
    <string name="contraseña">Contraseña: </string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="recordar">Recordar datos</string>

    <!--Pantalla de Maps / Menú flotante-->
    <string name="titulo">Control de Flotas</string>
    <string name="flota">Flota Arco</string>
    <string name="vehiculos">Vehículos</string>
    <string name="menu">Menú</string>
    <string name="estados">ESTADOS</string>
    <string name="ajustes">Ajustes</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="informes">Informes</string>
    <string name="zonas">Zonas</string>
    <string name="visualizar">Visualizar Mapa</string>
    <string name="eventos">Eventos</string>
    <string name="alarmas">Alarmas</string>
    <string name="matricula">Matrícula</string>
    <string name="evento">Evento</string>

    <!--Pantalla de Diálogo Datos-->
    <string name="informe">Informe</string>
    <string name="salir">Salir</string>
    <string name="direccion">Dirección:</string>
    <string name="fecha">Fecha y hora: </string>
    <string name="velocidad">Velocidad: </string>
    <string name="distancia">Distancia: </string>
    <string name="altitud">Altitud: </string>
    <string name="rpm">Rpm: </string>
    <string name="temperatura">Temperatura: </string>
    <string name="presion">Presión: </string>
    <string name="solo_fecha">Fecha: </string>
    <string name="datosCan">DATOS CAN</string>
    <string name="odometro">Odómetro:</string>
    <string name="combustibleUsado">Combustible usado:</string>
    <string name="horasMotor">Horas de motor:</string>
    <string name="nivelCombustible">Nivel de combustible:</string>
    <string name="tempMotor">Temperatura motor:</string>
    <string name="servicio">Distancia servicio:</string>

    <string name="viaje">Viaje:</string>
    <string name="planta">Planta:</string>
    <string name="cliente">Cliente:</string>
    <string name="obra">Obra:</string>
    <string name="albaran">Albarán:</string>
    <string name="m3">M3:</string>
    <string name="aguaAd">Agua Ad.:</string>

    <string name="infoCAN">CAN</string>
    <string name="eventoVehiculo">Eventos</string>
    <string name="alarmaVehiculo">Alertas</string>

    <!--Pantalla de Detalles-->
    <string name="hora">Hora</string>
    <string name="direc">Dirección</string>
    <string name="comportamiento">Acción</string>
    <string name="title_activity_a_b">ActivityAB</string>
    <string name="descargar">Descargar</string>
    <string name="enviar">Enviar</string>

    <!--Pantalla de Diálogo Informe-->
    <string name="title">ELIJA UN VEHÍCULO</string>
    <string name="title_activity_zonas">Map</string>

    <!--Pantalla de Zonas Activity-->
    <string name="codigo">Código</string>
    <string name="descripcion">Descripción</string>
    <string name="tipo">Tipo Zona</string>
    <string name="buscar">Búsqueda</string>
    <string name="insert">Añadir</string>
    <string name="update">Editar</string>
    <string name="delete">Borrar</string>
    <string name="guardar">Guardar</string>
    <string name="fin">Fin</string>
    <string name="cancelar">Cancelar</string>
    <string name="agrega">Nueva</string>
    <string name="finalizar">Finalizar</string>

    <string-array name="tiposZonas">
        <item>Planta Hormigón</item>
        <item>Obra Cliente</item>
        <item>Oficina Central</item>
        <item>Zona 4</item>
        <item>Talleres</item>
    </string-array>
    <string name="title_activity_edicion">Map</string>

    <!--Pantalla de Diálogo Ajustes-->
    <string name="datos_mostrar">SELECCIONE LOS DATOS A MOSTRAR</string>
    <string name="odometroAjustes">Odómetro</string>
    <string name="combustibleAjustes">Combustible total:</string>
    <string name="temperaturaAjustes">Temperatura del motor</string>
    <string name="ralentiAjustes">Tiempo en ralentí</string>
    <string name="combralentiAjustes">Combustible en ralentí</string>
    <string name="frenadasAjustes">Nº aplicaciones freno</string>
    <string name="sobrefrenadasAjustes">Nº frenadas con sobrefrenado</string>
    <string name="sobrevelocidadAjustes">Duración sobre velocidad</string>
    <string name="sobreaceleraAjustes">Duración sobre aceleración</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancela">Cancelar</string>
    <string name="todo">Seleccionar Todo</string>


</resources>