<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gris_oscuro"
            android:gravity="center"
            android:text="@string/datos_mostrar"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:textColor="#FFFFFF" />

        <CheckBox
            android:id="@+id/chkOdometro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/odometroAjustes"
            android:buttonTint="@color/white"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/chkCombustible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/combustibleAjustes"
            android:buttonTint="@color/white"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/chkTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/temperaturaAjustes"
            android:buttonTint="@color/white"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/chkRalenti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ralentiAjustes"
            android:buttonTint="@color/white"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/chkCombustibleRalenti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/combralentiAjustes"
            android:buttonTint="@color/white"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/chkFrenadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/frenadasAjustes"
            android:buttonTint="@color/white"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/chkSobrefrenadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sobrefrenadasAjustes"
            android:buttonTint="@color/white"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/chkVelocidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sobrevelocidadAjustes"
            android:buttonTint="@color/white"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/chkAceleracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sobreaceleraAjustes"
            android:buttonTint="@color/white"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <Button
            android:id="@+id/btnGuardaDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/gris_oscuro"
            android:text="@string/confirmar"
            android:textSize="12sp"
            android:translationX="-5dp" />

        <Button
            android:id="@+id/btnSeleccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/gris_oscuro"
            android:text="@string/todo"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnCancelaSel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/gris_oscuro"
            android:text="@string/cancela"
            android:textSize="12sp"
            android:translationX="5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>